# Chip-8

./: .clangd  CMakeLists.txt  CMakePresets.json  README.md  main.cpp  operations.hpp
